Fix broken css aliases

--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -8,17 +8,17 @@
 
   @font-face {
     font-family: "Circular";
-    src: url("assets/fonts/circular.otf") format("opentype");
+    src: url("/assets/fonts/circular.otf") format("opentype");
   }
 
   @font-face {
     font-family: "Circular Black";
-    src: url("assets/fonts/circular.otf") format("opentype");
+    src: url("/assets/fonts/circular.otf") format("opentype");
   }
 
   @font-face {
     font-family: "Circular Book";
-    src: url("assets/fonts/CircularStd-book.otf") format("opentype");
+    src: url("/assets/fonts/CircularStd-book.otf") format("opentype");
   }
 
   // Fonts
